--- a/FastTickets/FastTickets/FastTickets.csproj
+++ b/FastTickets/FastTickets/FastTickets.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Evento\Index.cshtml" />
     <Content Include="Views\LocalEvento\Index.cshtml" />
+    <Content Include="Views\Shared\_Rodape.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
