--- a/FastTickets/FastTickets/FastTickets.csproj
+++ b/FastTickets/FastTickets/FastTickets.csproj
@@ -244,6 +244,7 @@
     <Content Include="Views\LocalEvento\Index.cshtml" />
     <Content Include="Views\Shared\_Rodape.cshtml" />
     <Content Include="Views\Home\Editar.cshtml" />
+    <Content Include="Views\Home\Excluir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
