Pesquisa, Editar e Repetição no banco
Botão de pesquisa retorna todos os dados se o campo estiver vazio, o botão editar está funcionando e não é mais possível cadastrar eventos e locais já existentes no banco

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ bin/
 *.dll
 *.dll
 *.pdb
+*.suo
+FastTickets/FastTickets.v11.suo
+FastTickets/FastTickets/bin/FastTickets.pdb
+FastTickets/FastTickets/obj/Debug/FastTickets.dll
+FastTickets/FastTickets/obj/Debug/FastTickets.pdb
+FastTickets/FastTickets/bin/FastTickets.pdb
